// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AfterTitle/> render() should render with different score values 1`] = `
<div
  class="afterTitle"
>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`<AfterTitle/> render() should render with different score values 2`] = `
<div
  class="afterTitle"
>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`<AfterTitle/> render() should render with different score values 3`] = `
<div
  class="afterTitle"
>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`<BeforeContent/> render() should render images correctly 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    >
      Review title
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue isNotBold"
    >
      Long review content lorem ipsum dolor sit amen...
    </span>
  </div>
</div>
`;

exports[`<BeforeContent/> render() should render votes down correctly 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    >
      Review title
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue isNotBold"
    >
      Long review content lorem ipsum dolor sit amen...
    </span>
  </div>
</div>
`;

exports[`<BeforeContent/> render() should render votes up correctly 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    >
      Review title
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue isNotBold"
    >
      Long review content lorem ipsum dolor sit amen...
    </span>
  </div>
</div>
`;

exports[`<BeforeContent/> render() should render with both votes up and down correctly 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    >
      Review title
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue isNotBold"
    >
      Long review content lorem ipsum dolor sit amen...
    </span>
  </div>
</div>
`;

exports[`<BeforeContent/> render() should render with no images 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue"
    >
      Review title
    </span>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldValue isNotBold"
    >
      Long review content lorem ipsum dolor sit amen...
    </span>
  </div>
</div>
`;

exports[`<TitleWrapper/> render() should render both visible and invisible reviews correctly 1`] = `
<a
  class="title"
  href="#"
  target="_self"
>
  <span
    class="material-icons inventory"
  >
    inventory
  </span>
  <span />
</a>
`;

exports[`<TitleWrapper/> render() should render both visible and invisible reviews correctly 2`] = `
<a
  class="title"
  href="#"
  target="_self"
>
  <span
    class="material-icons inventory"
  >
    inventory
  </span>
  <span />
</a>
`;
